--- a/configs/train_nextchipDB.yaml
+++ b/configs/train_nextchipDB.yaml
@@ -1,27 +1,26 @@
 arch:
     max_epochs: 50
 checkpoint:
-    filepath: '/home/seok436/data/md_model/'
+    filepath: '/home/seok436/data/md_model/Parking/scratch_ReLU'
     save_top_k: -1
 model:
     name: 'SelfSupModel'
-    checkpoint_path: '/home/seok436/data/md_model/PackNet01_MR_velsup_CStoK.ckpt'
     optimizer:
         name: 'Adam'
         depth:
-            lr: 0.000002
+            lr: 0.0002
         pose:
-            lr: 0.000002
+            lr: 0.0002
     scheduler:
         name: 'StepLR'
-        step_size: 30
+        step_size: 20
         gamma: 0.5
     depth_net:
-        name: 'PackNet01'
-        version: '1A'
+        name: 'DepthResNet'
+        version: '18pt'
     pose_net:
-        name: 'PoseNet'
-        version: ''
+        name: 'PoseResNet'
+        version: '18pt'
     params:
         crop: 'garg'
         min_depth: 0.0
@@ -30,16 +29,15 @@ datasets:
     augmentation:
         image_shape: (192, 640)
     train:
-        batch_size: 10
+        batch_size: 20
         dataset: ['Image']
-        path: ['/home/seok436/data/nextchipDB_SSL/crop/v1+/T_0001/']
+        path: ['/home/seok436/data/nextchipDB_SSL/crop/TP_0001_v3/']
         split: ['{:010}']
-        repeat: [2]
     validation:
         dataset: ['Image']
-        path: ['/home/seok436/data/nextchipDB_SSL/crop/v1+/T_0002/']
+        path: ['/home/seok436/data/nextchipDB_SSL/crop/TP_0002_v3/']
         split: ['{:010}']
     test:
         dataset: ['Image']
-        path: ['/home/seok436/data/nextchipDB_SSL/crop/v1+/T_0003/']
+        path: ['/home/seok436/data/nextchipDB_SSL/crop/TP_0003_v3/']
         split: ['{:010}']
