--- a/configs/train_kitti_HRLiteNet_640_384.yaml
+++ b/configs/train_kitti_HRLiteNet_640_384.yaml
@@ -1,7 +1,7 @@
 arch:
     max_epochs: 50
 checkpoint:
-    filepath: '/home/seok436/data/md_model/kitti/HRLiteNet/640_384/no_attention/'
+    filepath: '/home/seok436/data/md_model/kitti/HRLiteNet/640_384/no_attention_0.75_ReLU/'
     save_top_k: -1
 model:
     name: 'SelfSupModel'
@@ -13,14 +13,14 @@ model:
             lr: 0.0001
     scheduler:
         name: 'StepLR'
-        step_size: 12
+        step_size: 20
         gamma: 0.5
     depth_net:
         name: 'HRLiteNet'
         version: '18pt'
     pose_net:
-        name: 'PoseResNet'
-        version: '18pt'
+        name: 'PoseNet'
+        version: ''
     params:
         crop: 'garg'
         min_depth: 0.0
@@ -29,12 +29,12 @@ datasets:
     augmentation:
         image_shape: (384, 640)
     train:
-        batch_size: 16
+        batch_size: 20
         dataset: ['KITTI']
         path: ['/home/seok436/data/datasets/KITTI_raw']
         split: ['data_splits/eigen_zhou_files.txt']
         depth_type: ['velodyne']
-        repeat: [2]
+        repeat: [1]
     validation:
         dataset: ['KITTI']
         path: ['/home/seok436/data/datasets/KITTI_raw']
