--- a/configs/train_kitti_DepthReXNet_640_384.yaml
+++ b/configs/train_kitti_DepthReXNet_640_384.yaml
@@ -1,7 +1,7 @@
 arch:
     max_epochs: 50
 checkpoint:
-    filepath: '/home/seok436/data/md_model/kitti/DepthRexNet/18/640_384/DNet_decoder/+8_+8_+16_+16'
+    filepath: '/home/seok436/data/md_model/kitti/DepthRexNet/18/640_384/DepthReXNet_pt/72_80_96_112'
     save_top_k: -1
 model:
     name: 'SelfSupModel'
@@ -16,7 +16,7 @@ model:
         step_size: 14
         gamma: 0.5
     depth_net:
-        name: 'DepthResDNet'
+        name: 'DepthReXNet'
         version: '18np'
     pose_net:
         name: 'PoseResNet'
@@ -29,7 +29,7 @@ datasets:
     augmentation:
         image_shape: (384, 640)
     train:
-        batch_size: 16
+        batch_size: 18
         dataset: ['KITTI']
         path: ['/home/seok436/data/datasets/KITTI_raw']
         split: ['data_splits/eigen_zhou_files.txt']
