--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,10 @@ coverage.xml
 *.mo
 *.pot
 
+#Media
+media/results
+media/tests
+
 # Django stuff:
 *.log
 local_settings.py
@@ -136,3 +140,4 @@ configs/train_nextchipDB_TP.yaml
 configs/train_nextchipDB.yaml
 configs/train_omnicam.yaml
 configs/mobilenetv3-large-0.75-9632d2a8.pth
+configs/mobilenetv3-small-55df8e1f.pth
