--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,10 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            "args" : ["/home/seok436/packnet-sfm-master/configs/train_kitti_HRLiteNet_640_384.yaml"],
+            // Train
+            "args" : ["/home/seok436/packnet-sfm-master_2/configs/train_nextchipDB_TP_apach5_rearview.yaml"],
+            // Evaluation
+            //"args" : ["--checkpoint", "/home/seok436/data/md_model/kitti/DepthRexNet/18/640_384/DepthRexNet_scratch_channel_reduction/default_config-train_kitti_DepthReXNet_640_384-2022.09.14-19h32m13s/epoch=49_KITTI_raw-eigen_val_files-velodyne-loss=0.000.ckpt", "--config", "configs/train_kitti_DepthReXNet_640_384.yaml"],
             "console": "integratedTerminal"
         }
     ]
