--- a/configs/train_KITTI_A5_RepVGGNet_640_384.yaml
+++ b/configs/train_KITTI_A5_RepVGGNet_640_384.yaml
@@ -1,11 +1,7 @@
 arch:
-    max_epochs: 50
+    max_epochs: 30
 checkpoint:
-<<<<<<< HEAD
-    filepath: '/home/seok436/data/md_model/kitti/DepthRexNet/18/640_384/DepthRexNet_ImageNet_pt_channel_reduction/8_8_16_16'
-=======
-    filepath: '/home/seok436/data/md_model/kitti/DepthRexNet/18/640_384/DepthReXNet_pt/72_80_96_112'
->>>>>>> c05589404f1f6e299e24fb74314c1f5f5fdf7c6c
+    filepath: '/home/seok436/data/md_model/A5_frontview/repVGG_ECA_Dnet/KITTI_b30'
     save_top_k: -1
 model:
     name: 'SelfSupModel'
@@ -17,15 +13,11 @@ model:
             lr: 0.0001
     scheduler:
         name: 'StepLR'
-        step_size: 14
+        step_size: 15
         gamma: 0.5
     depth_net:
-        name: 'DepthReXNet'
-<<<<<<< HEAD
-        version: '18no'
-=======
-        version: '18np'
->>>>>>> c05589404f1f6e299e24fb74314c1f5f5fdf7c6c
+        name: 'DepthRepVGGNet'
+        version: '18pt'
     pose_net:
         name: 'PoseResNet'
         version: '18pt'
@@ -35,13 +27,9 @@ model:
         max_depth: 80.0
 datasets:
     augmentation:
-        image_shape: (384, 640)
+        image_shape: (192, 640)
     train:
-<<<<<<< HEAD
-        batch_size: 16
-=======
-        batch_size: 18
->>>>>>> c05589404f1f6e299e24fb74314c1f5f5fdf7c6c
+        batch_size: 20
         dataset: ['KITTI']
         path: ['/home/seok436/data/datasets/KITTI_raw']
         split: ['data_splits/eigen_zhou_files.txt']
