--- a/configs/train_NCDB_A5_RepVGGNet_640_384 copy.yaml
+++ b/configs/train_NCDB_A5_RepVGGNet_640_384 copy.yaml
@@ -1,7 +1,7 @@
 arch:
     max_epochs: 50
 checkpoint:
-    filepath: '/home/seok436/data/md_model/A5_frontview/8_8_16_16/intrinsics_1000'
+    filepath: '/home/seok436/data/md_model/A5_frontview/repVGG/intrinsics_1000'
     save_top_k: -1
 model:
     name: 'SelfSupModel'
@@ -16,8 +16,8 @@ model:
         step_size: 14
         gamma: 0.5
     depth_net:
-        name: 'DepthReXNet'
-        version: '18np'
+        name: 'DepthRepVGGNet'
+        version: '18pt'
     pose_net:
         name: 'PoseResNet'
         version: '18pt'
