--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,12 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "program": "${file}",
+            "program": "scripts/train.py",
             // Train
-            "args" : ["/home/seok436/packnet-sfm-master_2/configs/train_NCDB_A5_DepthResNet_640_384.yaml"],
+            "args" : ["/home/seok436/packnet-sfm-master_2/configs/train_NCDB_A5_generic.yaml"],
             // Evaluation
-            //"args" : ["--checkpoint", "/home/seok436/data/md_model/kitti/DepthRexNet/18/640_384/DepthRexNet_scratch_channel_reduction/default_config-train_kitti_DepthReXNet_640_384-2022.09.14-19h32m13s/epoch=49_KITTI_raw-eigen_val_files-velodyne-loss=0.000.ckpt", "--config", "configs/train_kitti_DepthReXNet_640_384.yaml"],
+            // "args" : ["--checkpoint", "/home/seok436/data/md_model/A5_frontview/repVGG_ECA_Dnet/KITTI/default_config-train_KITTI_A5_RepVGGNet_640_384-2023.02.27-18h03m45s/epoch=19_KITTI_raw-eigen_val_files-velodyne-loss=0.000.ckpt", 
+            // "--config", "configs/train_KITTI_A5_RepVGGNet_640_384.yaml"],
             "console": "integratedTerminal"
         }
     ]
